--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="content">
         <h1 style="margin-top: 1rem; text-align: center;">Hello, Welcome to <span style="color: lightblue;">TrackIT</span></h1>
-        <p class="text_between" class="text-center">TrackIT is a site where you can store all your item informations and keep track of it</p>
+        <p class="text_between" class="text-center">TrackIT is a site where you can store all your item informations</p>
         <img class="home_img" src="static/icon/floppy-disk.png">
         <p class="text_between" class="text-center">With TrackIT, you can manage your items</p>
         <img class="home_img" src="static/icon/manage.png">
